--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -24,8 +24,8 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }} # opcional
-          aws-region: us-east-1
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-region: ${{ github.event.inputs.aws_region || 'us-east-1' }}
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
@@ -33,18 +33,18 @@ jobs:
           terraform_version: "1.6.0"
 
       - name: Terraform Init
-        working-directory: infra/terraform/environments/dev
-        run: terraform init -input=false
+        run: terraform init -input=false -backend-config="bucket=${{ github.event.inputs.bucket_name || format('%s-%s-backend', github.event.inputs.project_name || 'prueba-infra-3', github.repository) }}" -backend-config="region=${{ github.event.inputs.aws_region || 'us-east-1' }}" 
+        working-directory: infra/terraform
 
       - name: Terraform Validate
-        working-directory: infra/terraform/environments/dev
         run: terraform validate
+        working-directory: infra/terraform
 
       - name: Terraform Plan
-        working-directory: infra/terraform/environments/dev
         run: terraform plan -out=tfplan -input=false
+        working-directory: infra/terraform
 
-      - name: Terraform Apply (solo en push a main)
+      - name: Terraform Apply
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        working-directory: infra/terraform/environments/dev
         run: terraform apply -input=false -auto-approve tfplan
+        working-directory: infra/terraform
