--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -6,6 +6,19 @@ on:
   pull_request:
     branches: [ main ]
   workflow_dispatch:
+    inputs:
+      project_name:
+        description: 'Nombre del proyecto'
+        required: false
+      aws_region:
+        description: 'Región AWS'
+        required: false
+      bucket_name:
+        description: 'Bucket S3 backend'
+        required: false
+      table_name:
+        description: 'Tabla DynamoDB backend'
+        required: false
 
 permissions:
   contents: read
@@ -27,13 +40,31 @@ jobs:
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
           aws-region: ${{ github.event.inputs.aws_region || 'us-east-1' }}
 
+      - name: Validar backend remoto existe
+        run: |
+          BUCKET="${{ github.event.inputs.bucket_name || format('%s-%s-backend', github.event.inputs.project_name || 'prueba-infra-3', github.repository) }}"
+          TABLE="${{ github.event.inputs.table_name || 'terraform-state-lock' }}"
+          REGION="${{ github.event.inputs.aws_region || 'us-east-1' }}"
+
+          echo "Verificando bucket S3..."
+          if ! aws s3api head-bucket --bucket "$BUCKET" 2>/dev/null; then
+            echo "ERROR: Bucket S3 $BUCKET no existe. Ejecuta create-backend primero."
+            exit 1
+          fi
+
+          echo "Verificando tabla DynamoDB..."
+          if ! aws dynamodb describe-table --table-name "$TABLE" >/dev/null 2>&1; then
+            echo "ERROR: Tabla DynamoDB $TABLE no existe. Ejecuta create-backend primero."
+            exit 1
+          fi
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: "1.6.0"
 
       - name: Terraform Init
-        run: terraform init -input=false -backend-config="bucket=${{ github.event.inputs.bucket_name || format('%s-%s-backend', github.event.inputs.project_name || 'prueba-infra-3', github.repository) }}" -backend-config="region=${{ github.event.inputs.aws_region || 'us-east-1' }}" 
+        run: terraform init -input=false -backend-config="bucket=$BUCKET" -backend-config="region=$REGION" -reconfigure
         working-directory: infra/terraform
 
       - name: Terraform Validate
