--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -6,19 +6,6 @@ on:
   pull_request:
     branches: [ main ]
   workflow_dispatch:
-    inputs:
-      project_name:
-        description: 'Nombre del proyecto'
-        required: false
-      aws_region:
-        description: 'Región AWS'
-        required: false
-      bucket_name:
-        description: 'Bucket S3 backend'
-        required: false
-      table_name:
-        description: 'Tabla DynamoDB backend'
-        required: false
 
 permissions:
   contents: read
@@ -38,13 +25,13 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-          aws-region: ${{ github.event.inputs.aws_region || 'us-east-1' }}
+          aws-region: ${{ secrets.AWS_REGION || 'us-east-1' }}
 
       - name: Validar backend remoto existe
         run: |
-          BUCKET="${{ github.event.inputs.bucket_name || format('%s-%s-backend', github.event.inputs.project_name || 'prueba-infra-3', github.repository) }}"
-          TABLE="${{ github.event.inputs.table_name || 'terraform-state-lock' }}"
-          REGION="${{ github.event.inputs.aws_region || 'us-east-1' }}"
+          BUCKET="${{ secrets.BACKEND_BUCKET }}"
+          TABLE="${{ secrets.BACKEND_TABLE }}"
+          REGION="${{ secrets.AWS_REGION || 'us-east-1' }}"
 
           echo "Verificando bucket S3..."
           if ! aws s3api head-bucket --bucket "$BUCKET" 2>/dev/null; then
@@ -64,7 +51,7 @@ jobs:
           terraform_version: "1.6.0"
 
       - name: Terraform Init
-        run: terraform init -input=false -backend-config="bucket=$BUCKET" -backend-config="region=$REGION" -reconfigure
+        run: terraform init -input=false -backend-config="bucket=${{ secrets.BACKEND_BUCKET }}" -backend-config="region=${{ secrets.AWS_REGION || 'us-east-1' }}" -reconfigure
         working-directory: infra/terraform
 
       - name: Terraform Validate
