--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -78,6 +78,11 @@ jobs:
         working-directory: infra/terraform
         shell: bash
 
+      - name: Terraform Refresh
+        run: terraform refresh
+        working-directory: infra/terraform
+
+
       - name: Terraform Validate
         run: terraform validate
         working-directory: infra/terraform
@@ -103,14 +108,6 @@ jobs:
         run: |
           #!/bin/bash
           set -euo pipefail
-
-          # Inicializar Terraform para asegurar que el backend remoto esté disponible
-          terraform init \
-            -backend-config="bucket=${TF_BUCKET}" \
-            -backend-config="region=${TF_REGION}" \
-            -backend-config="key=terraform.tfstate" \
-            -backend-config="dynamodb_table=${TF_TABLE}" \
-            -reconfigure
 
           # Si no hay recurso aws_instance.this en el state -> salir con outputs vacíos
           if ! terraform state list 2>/dev/null | grep -q '^aws_instance.this$'; then
