--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -94,78 +94,16 @@ jobs:
         working-directory: infra/terraform
         shell: bash
 
-      - name: Debug EC2_USER y EC2_HOST
-        working-directory: infra/terraform
-        run: |
-          #!/bin/bash
-          set -euo pipefail
-
-          echo "=== Directorio actual ==="
-          pwd
-          echo "=== Listando recursos en el state ==="
-          terraform state list || true
-
-          echo "=== Intentando obtener aws_instance.this ==="
-          terraform state show aws_instance.this || true
-
-          # IP pública desde output
-          EC2_HOST=$(terraform output -raw instance_ip 2>/dev/null || true)
-          echo "Output instance_ip: '$EC2_HOST'"
-
-          # Fallback desde state si el output falla
-          if [ -z "$EC2_HOST" ]; then
-            echo "Output vació, intentando desde state..."
-            EC2_HOST=$(terraform state show aws_instance.this 2>/dev/null | sed -n 's/^public_ip *= *"\(.*\)"/\1/p' || true)
-            echo "IP pública desde state: '$EC2_HOST'"
-          fi
-
-          # AMI
-          AMI_ID=$(terraform state show aws_instance.this 2>/dev/null | sed -n 's/^ami *= *"\(.*\)"/\1/p' || true)
-          echo "AMI_ID: '$AMI_ID'"
-
-          # AWS_REGION
-          AWS_REGION="${{ github.event.inputs.aws_region || secrets.AWS_REGION || 'us-east-1' }}"
-          echo "AWS_REGION: $AWS_REGION"
-
-          # Obtener EC2_USER desde tag 'User'
-          EC2_USER=$(aws ec2 describe-images --image-ids "${AMI_ID:-}" --region "$AWS_REGION" \
-            --query 'Images[0].Tags[?Key==`User`].Value' --output text 2>/dev/null || true)
-          echo "Usuario desde tag 'User': '$EC2_USER'"
-
-          # Inferir por nombre de la AMI
-          if [ -z "${EC2_USER:-}" ] || [ "${EC2_USER:-}" = "None" ]; then
-            ami_name=$(aws ec2 describe-images --image-ids "${AMI_ID:-}" --region "$AWS_REGION" \
-              --query 'Images[0].Name' --output text 2>/dev/null || true)
-            ami_name_lc=$(echo "${ami_name:-}" | tr '[:upper:]' '[:lower:]' || true)
-            case "$ami_name_lc" in
-              *ubuntu*) EC2_USER="ubuntu" ;;
-              *amazon*|*amazon-linux*|*amazonlinux*) EC2_USER="ec2-user" ;;
-              *debian*) EC2_USER="admin" ;;
-              *centos*) EC2_USER="centos" ;;
-              *windows*) EC2_USER="Administrator" ;;
-              *) EC2_USER="ec2-user" ;;
-            esac
-            echo "Usuario inferido por AMI: '$EC2_USER'"
-          fi
-
-          # Exportar outputs
-          echo "ec2_user=$EC2_USER" >> "$GITHUB_OUTPUT"
-          echo "ec2_host=$EC2_HOST" >> "$GITHUB_OUTPUT"
-
-          echo "Final: EC2_USER='$EC2_USER', EC2_HOST='$EC2_HOST'"
-
-
-      # ------------------------------
-      # (SIMPLIFICADO) Obtener EC2_USER y EC2_HOST
-      # ------------------------------
-      - name: Obtener EC2_USER y EC2_HOST
+      - name: Obtener EC2_USER y EC2_HOST (mejorado)
         id: ec2-vars
         working-directory: infra/terraform
         run: |
           #!/bin/bash
           set -euo pipefail
 
-          # Si no hay recurso aws_instance.this en el state -> salir con outputs vacíos
+          echo "=== Listando recursos en el state ==="
+          terraform state list || true
+
           if ! terraform state list 2>/dev/null | grep -q '^aws_instance.this$'; then
             echo "No hay aws_instance.this en el state. No se generarán secrets."
             echo "ec2_user=" >> "$GITHUB_OUTPUT"
@@ -173,20 +111,28 @@ jobs:
             exit 0
           fi
 
-          # IP pública (output explícito)
-          EC2_HOST=$(terraform output -raw instance_ip 2>/dev/null || true)
+          # Intentar obtener IP desde output, limpiar metadatos extra
+          EC2_HOST=$(terraform output instance_ip 2>/dev/null | grep -Eo '([0-9]{1,3}\.){3}[0-9]{1,3}' || true)
 
-          # AMI desde el state (la instancia creada por Terraform)
-          AMI_ID=$(terraform state show -no-color aws_instance.this 2>/dev/null | sed -n 's/^ami *= *"\(.*\)"/\1/p' || true)
+          # Fallback desde state si el output falla
+          if [ -z "$EC2_HOST" ]; then
+            echo "Output vacío, usando public_ip desde state..."
+            EC2_HOST=$(terraform state show aws_instance.this 2>/dev/null | sed -n 's/^public_ip *= *"\(.*\)"/\1/p' || true)
+          fi
 
-          # Región (misma lógica que usas en el job)
+          echo "EC2_HOST detectado: '$EC2_HOST'"
+
+          # AMI desde state
+          AMI_ID=$(terraform state show aws_instance.this 2>/dev/null | sed -n 's/^ami *= *"\(.*\)"/\1/p' || true)
+          echo "AMI_ID: '$AMI_ID'"
+
           AWS_REGION="${{ github.event.inputs.aws_region || secrets.AWS_REGION || 'us-east-1' }}"
 
-          # Intentar obtener usuario desde tag 'User'
+          # Usuario desde tag 'User'
           EC2_USER=$(aws ec2 describe-images --image-ids "${AMI_ID:-}" --region "$AWS_REGION" \
             --query 'Images[0].Tags[?Key==`User`].Value' --output text 2>/dev/null || true)
 
-          # Si no existe tag 'User', inferir por nombre de la AMI
+          # Inferir usuario por nombre de AMI
           if [ -z "${EC2_USER:-}" ] || [ "${EC2_USER:-}" = "None" ]; then
             ami_name=$(aws ec2 describe-images --image-ids "${AMI_ID:-}" --region "$AWS_REGION" \
               --query 'Images[0].Name' --output text 2>/dev/null || true)
@@ -201,10 +147,12 @@ jobs:
             esac
           fi
 
-          # Exportar outputs para GitHub Actions
-          echo "ec2_user=${EC2_USER:-ec2-user}" >> "$GITHUB_OUTPUT"
-          echo "ec2_host=${EC2_HOST:-}" >> "$GITHUB_OUTPUT"
-        shell: bash
+          echo "EC2_USER detectado: '$EC2_USER'"
+
+          # Exportar a GitHub Actions
+          echo "ec2_user=$EC2_USER" >> "$GITHUB_OUTPUT"
+          echo "ec2_host=$EC2_HOST" >> "$GITHUB_OUTPUT"
+
 
       # ------------------------------
       # (SIMPLIFICADO) Crear secrets con PAT (gh)
