--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -94,12 +94,31 @@ jobs:
         working-directory: infra/terraform
         shell: bash
 
-      - name: Obtener EC2_USER y EC2_HOST (mejorado)
+      - name: Obtener EC2_USER y EC2_HOST con debug
         id: ec2-vars
         working-directory: infra/terraform
         run: |
           #!/bin/bash
           set -euo pipefail
+
+          echo "=== Directorio actual ==="
+          pwd
+
+          echo "=== Terraform init (reconfigurando backend) ==="
+          terraform init \
+            -backend-config="bucket=$TF_BUCKET" \
+            -backend-config="region=$TF_REGION" \
+            -backend-config="key=terraform.tfstate" \
+            -backend-config="dynamodb_table=$TF_TABLE" \
+            -reconfigure
+
+          echo "=== Forzando refresh del state ==="
+          terraform refresh -input=false || true
+
+          echo "=== Imprimiendo state remoto (state pull) ==="
+          terraform state pull > state.json
+          echo "=== Contenido state.json ==="
+          cat state.json
 
           echo "=== Listando recursos en el state ==="
           terraform state list || true
@@ -111,31 +130,31 @@ jobs:
             exit 0
           fi
 
-          # Intentar obtener IP desde output, limpiar metadatos extra
-          EC2_HOST=$(terraform output instance_ip 2>/dev/null | grep -Eo '([0-9]{1,3}\.){3}[0-9]{1,3}' || true)
+          echo "=== Intentando obtener aws_instance.this ==="
+          terraform state show aws_instance.this || true
 
-          # Fallback desde state si el output falla
-          if [ -z "$EC2_HOST" ]; then
-            echo "Output vacío, usando public_ip desde state..."
-            EC2_HOST=$(terraform state show aws_instance.this 2>/dev/null | sed -n 's/^public_ip *= *"\(.*\)"/\1/p' || true)
-          fi
+          # Obtener IP pública (output explícito)
+          EC2_HOST=$(terraform output -raw instance_ip 2>/dev/null || true)
+          echo "IP pública detectada: '$EC2_HOST'"
 
-          echo "EC2_HOST detectado: '$EC2_HOST'"
+          # Obtener AMI desde el state
+          AMI_ID=$(terraform state show -no-color aws_instance.this 2>/dev/null \
+                  | sed -n 's/^ami *= *"\(.*\)"/\1/p' || true)
+          echo "AMI_ID detectada: '$AMI_ID'"
 
-          # AMI desde state
-          AMI_ID=$(terraform state show aws_instance.this 2>/dev/null | sed -n 's/^ami *= *"\(.*\)"/\1/p' || true)
-          echo "AMI_ID: '$AMI_ID'"
-
+          # Región
           AWS_REGION="${{ github.event.inputs.aws_region || secrets.AWS_REGION || 'us-east-1' }}"
+          echo "Región AWS usada: $AWS_REGION"
 
-          # Usuario desde tag 'User'
+          # Intentar obtener usuario desde tag 'User'
           EC2_USER=$(aws ec2 describe-images --image-ids "${AMI_ID:-}" --region "$AWS_REGION" \
             --query 'Images[0].Tags[?Key==`User`].Value' --output text 2>/dev/null || true)
+          echo "Usuario desde tag 'User': '$EC2_USER'"
 
-          # Inferir usuario por nombre de AMI
+          # Si no existe tag 'User', inferir por nombre de la AMI
           if [ -z "${EC2_USER:-}" ] || [ "${EC2_USER:-}" = "None" ]; then
             ami_name=$(aws ec2 describe-images --image-ids "${AMI_ID:-}" --region "$AWS_REGION" \
-              --query 'Images[0].Name' --output text 2>/dev/null || true)
+                        --query 'Images[0].Name' --output text 2>/dev/null || true)
             ami_name_lc=$(echo "${ami_name:-}" | tr '[:upper:]' '[:lower:]' || true)
             case "$ami_name_lc" in
               *ubuntu*) EC2_USER="ubuntu" ;;
@@ -145,13 +164,16 @@ jobs:
               *windows*) EC2_USER="Administrator" ;;
               *) EC2_USER="ec2-user" ;;
             esac
+            echo "Usuario inferido por AMI: '$EC2_USER'"
           fi
 
-          echo "EC2_USER detectado: '$EC2_USER'"
+          echo "=== Valores finales a exportar ==="
+          echo "EC2_USER='$EC2_USER'"
+          echo "EC2_HOST='$EC2_HOST'"
 
-          # Exportar a GitHub Actions
-          echo "ec2_user=$EC2_USER" >> "$GITHUB_OUTPUT"
-          echo "ec2_host=$EC2_HOST" >> "$GITHUB_OUTPUT"
+          echo "ec2_user=${EC2_USER:-ec2-user}" >> "$GITHUB_OUTPUT"
+          echo "ec2_host=${EC2_HOST:-}" >> "$GITHUB_OUTPUT"
+        shell: bash
 
 
       # ------------------------------
