--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -94,48 +94,54 @@ jobs:
         working-directory: infra/terraform
         shell: bash
 
-      - name: Obtener EC2_USER y EC2_HOST con debug mejorado
+      - name: Obtener EC2_USER y EC2_HOST (debug extendido)
         id: ec2-vars
         working-directory: infra/terraform
         run: |
           #!/bin/bash
           set -euo pipefail
 
-          echo "=== Listando recursos en el state ==="
-          terraform state list > state_list.txt
-          cat -v state_list.txt
+          echo "=== Directorio actual ==="
+          pwd
 
-          if ! grep -q '^aws_instance.this$' state_list.txt; then
+          echo "=== Terraform state list ==="
+          terraform state list || true
+
+          # Chequear si existe aws_instance.this en el state
+          if terraform state list 2>/dev/null | grep -q '^aws_instance.this$'; then
+            echo "aws_instance.this encontrado en el state ✅"
+          else
             echo "No hay aws_instance.this en el state. No se generarán secrets."
             echo "ec2_user=" >> "$GITHUB_OUTPUT"
             echo "ec2_host=" >> "$GITHUB_OUTPUT"
             exit 0
           fi
 
-          echo "aws_instance.this encontrado en el state ✅"
+          echo "=== Obteniendo output instance_ip ==="
+          RAW_IP=$(terraform output -raw instance_ip 2>/dev/null || echo "")
+          echo "Raw instance_ip: '$RAW_IP'"
 
-          # IP pública usando output JSON para evitar contaminación de logs
-          EC2_HOST=$(terraform output -json instance_ip 2>/dev/null | jq -r '.')
-          echo "IP pública detectada: '$EC2_HOST'"
+          # Limpiar posibles caracteres extras y debug lines
+          EC2_HOST=$(echo "$RAW_IP" | tr -d '\r' | tr -d '\n' | xargs)
+          echo "EC2_HOST limpio: '$EC2_HOST'"
 
-          # AMI desde el state
+          echo "=== Obteniendo AMI de la instancia ==="
           AMI_ID=$(terraform state show -no-color aws_instance.this 2>/dev/null \
-                  | sed -n 's/^ami *= *"\(.*\)"/\1/p' || true)
+                    | sed -n 's/^ami *= *"\(.*\)"/\1/p' || true)
           echo "AMI_ID detectada: '$AMI_ID'"
 
-          # Región
           AWS_REGION="${{ github.event.inputs.aws_region || secrets.AWS_REGION || 'us-east-1' }}"
           echo "Región AWS usada: $AWS_REGION"
 
-          # Usuario desde tag 'User'
+          # Intentar obtener usuario desde tag 'User'
           EC2_USER=$(aws ec2 describe-images --image-ids "${AMI_ID:-}" --region "$AWS_REGION" \
-            --query 'Images[0].Tags[?Key==`User`].Value' --output text 2>/dev/null || true)
+                    --query 'Images[0].Tags[?Key==`User`].Value' --output text 2>/dev/null || true)
           echo "Usuario desde tag 'User': '$EC2_USER'"
 
-          # Inferir usuario si no hay tag
-          if [ -z "${EC2_USER:-}" ] || [ "${EC2_USER:-}" = "None" ]; then
+          # Si no existe tag 'User', inferir por nombre de la AMI
+          if [ -z "${EC2_USER:-}" ] || [ "$EC2_USER" = "None" ]; then
             ami_name=$(aws ec2 describe-images --image-ids "${AMI_ID:-}" --region "$AWS_REGION" \
-                        --query 'Images[0].Name' --output text 2>/dev/null || true)
+                      --query 'Images[0].Name' --output text 2>/dev/null || true)
             ami_name_lc=$(echo "${ami_name:-}" | tr '[:upper:]' '[:lower:]' || true)
             case "$ami_name_lc" in
               *ubuntu*) EC2_USER="ubuntu" ;;
@@ -152,9 +158,11 @@ jobs:
           echo "EC2_USER='$EC2_USER'"
           echo "EC2_HOST='$EC2_HOST'"
 
-          echo "ec2_user=${EC2_USER:-ec2-user}" >> "$GITHUB_OUTPUT"
-          echo "ec2_host=${EC2_HOST:-}" >> "$GITHUB_OUTPUT"
+          # Exportar para GH Actions
+          echo "ec2_user=${EC2_USER}" >> "$GITHUB_OUTPUT"
+          echo "ec2_host=${EC2_HOST}" >> "$GITHUB_OUTPUT"
         shell: bash
+
 
 
 
